Arreglados socio, alumno pero con fallo de insert

--- a/app/views/create_alumno.scala.html
+++ b/app/views/create_alumno.scala.html
@@ -24,6 +24,9 @@
             @inputText(alumnoForm("coloniaProcedencia"))
             @inputText(alumnoForm("coloniaActual"))
             @inputText(alumnoForm("observaciones"))
+            Apadrinable <input type="checkbox"
+            name="apadrinable"
+            value="@alumnoForm("apadrinable")"><br>
 
             <button type="submit">Añadir alumno</button>
         }
