--- a/app/views/index_socios.scala.html
+++ b/app/views/index_socios.scala.html
@@ -17,6 +17,7 @@
                 <tr>
                     <th>Nombre</th>
                     <th>Apellidos</th>
+                    <th>Estado</th>
                     <th>NIF</th>
                     <th>Dirección</th>
                     <th>Población</th>
@@ -25,15 +26,20 @@
                     <th>Telefono Fijo</th>
                     <th>Telefono Móvil</th>
                     <th>Email</th>
+                    <th>Certificado</th>
                     <th>Sector</th>
                     <th>Fecha de alta</th>
                     <th>Fecha de baja</th>
                     <th>Observaciones</th>
+                    <th>Responsable</th>
+                    <th>Contribucioón económica</th>
+                    <th>Editar</th>
                 </tr>
                 @for(socio <- listaSocios) {
                     <tr>
                         <td>@socio.getNombre</td>
                         <td>@socio.getApellidos</td>
+                        <td>@socio.getEstado</td>
                         <td>@socio.getNif</td>
                         <td>@socio.getDireccion</td>
                         <td>@socio.getPoblacion</td>
@@ -42,15 +48,27 @@
                         <td>@socio.getTelefonoFijo</td>
                         <td>@socio.getTelefonoMovil</td>
                         <td>@socio.getEmail</td>
+                        <td>@socio.isCertificado</td>
                         <td>@socio.getSector</td>
                         <td>@socio.getFechaAlta</td>
                         <td>@socio.getFechaBaja</td>
                         <td>@socio.getObservaciones</td>
-                        <td>@socio.getResponsable</td>
+                        <td>@socio.getResponsable.getNombre</td>
                         <td>@socio.getContribucionEconomica</td>
+                        <td>
+                        @form(action = routes.SocioController.renderEditSocio(socio.getNumeroDeSocio)) {
+                            @helper.CSRF.formField
+                            <input type="hidden" name="socioId" value="@socio.getNumeroDeSocio" />
+                            <button type="submit">Editar socio"</button>
+                        }
+                        </td>
                     </tr>
                 }
             </table>
+            @form(action = routes.SocioController.renderCreateSocio()) {
+                @helper.CSRF.formField
+                <button type="submit">Añadir socio</button>
+            }
         </div>
     </body>
 </html>
