--- a/app/views/create_socio.scala.html
+++ b/app/views/create_socio.scala.html
@@ -24,6 +24,9 @@
             @inputText(socioForm("telefonoMovil"))
             @inputText(socioForm("email"))
             @inputText(socioForm("relacion"))
+            Certificado <input type="checkbox"
+            name="certificado"
+            value="@socioForm("certificado")"><br>
             @inputText(socioForm("sector"))
             @inputDate(socioForm("fechaAlta"))
             @inputDate(socioForm("fechaBaja"))
