--- a/app/views/edit_socio.scala.html
+++ b/app/views/edit_socio.scala.html
@@ -34,8 +34,8 @@
                 @inputText(socioForm("email"))
                 @inputText(socioForm("relacion"))
                 Certificado <input type="checkbox"
-                name="certificado"
-                value="@socioForm("certificado")"><br>
+                name="@socioForm("certificado").name"
+                value="@socioForm("certificado").value"><br>
                 @inputText(socioForm("sector"))
                 @inputDate(socioForm("fechaAlta"))
                 @inputText(socioForm("fechaBaja"))
