Fallos con SocioForm, create, edit

--- a/app/views/create_socio.scala.html
+++ b/app/views/create_socio.scala.html
@@ -1,7 +1,7 @@
 @import helper._
 @import models.entities.Socio
-
-@(socioForm: Form[Socio])
+@import models.forms.SocioForm
+@(socioForm: Form[SocioForm])
 
 <!DOCTYPE html>
 <html lang="en">
