--- a/app/views/edit_socio.scala.html
+++ b/app/views/edit_socio.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import play.data.Form
 @import models.forms.SocioForm
-@(socioForm: Form[socioForm], socioId: Int)
+@(socioForm: Form[SocioForm], socioId: Int)
 
 <!DOCTYPE html>
 <html lang="en">
