Apadrinamientos añadidos menos edit

--- a/app/views/edit_socio.scala.html
+++ b/app/views/edit_socio.scala.html
@@ -41,7 +41,7 @@
                 @inputDate(socioForm("fechaAlta"))
                 @inputText(socioForm("fechaBaja"))
                 @inputText(socioForm("observaciones"))
-                @inputText(socioForm("nombreRespondable"))
+                @inputText(socioForm("respondable"))
                 @inputText(socioForm("contribucionEconomica"))
                 <button type="submit">Editar socio</button>
             }
