--- a/app/views/create_socio.scala.html
+++ b/app/views/create_socio.scala.html
@@ -1,7 +1,7 @@
 @import helper._
 @import models.entities.Socio
-
-@(socioForm: Form[Socio])
+@import models.forms.SocioForm
+@(socioForm: Form[SocioForm])
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,6 +24,9 @@
             @inputText(socioForm("telefonoMovil"))
             @inputText(socioForm("email"))
             @inputText(socioForm("relacion"))
+            Certificado <input type="checkbox"
+            name="@socioForm("certificado").name"
+            value="@socioForm("certificado").value"><br>
             @inputText(socioForm("sector"))
             @inputDate(socioForm("fechaAlta"))
             @inputDate(socioForm("fechaBaja"))
