LAs cosas funkan

--- a/app/views/create_apadrinamiento.scala.html
+++ b/app/views/create_apadrinamiento.scala.html
@@ -1,7 +1,7 @@
 @import helper._
 @import models.entities.Apadrinamiento
 
-@(apadrinamientoForm: Form[Apadrinamiento], apadrinados: List[String], padrinos: List[String]
+@(apadrinamientoForm: Form[Apadrinamiento], apadrinados: List[String], padrinos: List[String])
     <head>
         <meta charset="UTF-8">
         <title>Introducir Apadrinamiento</title>
@@ -11,9 +11,9 @@
             @CSRF.formField
             @select(apadrinamientoForm("apadrinado"), options = options(apadrinados))
             @select(apadrinamientoForm("padrino"), options = options(padrinos))
-            @inputText(apadrinamientoFrom("aportacion"))
-            @inputDate(apadrinamientoFrom("fechaInicio"))
-            @inputDate(apadrinamientoFrom("fechaFin"))
+            @inputText(apadrinamientoForm("aportacion"))
+            @inputDate(apadrinamientoForm("fechaInicio"))
+            @inputDate(apadrinamientoForm("fechaFin"))
             <button type="submit">Añadir alumno</button>
         }
     </body>
