--- a/app/views/create_egreso.scala.html
+++ b/app/views/create_egreso.scala.html
@@ -1,7 +1,8 @@
 @import models.entities.Egreso
 @import helper._
 @import java.util
-@(egresoForm: Form[Egreso], tipos: List[String])
+@import models.forms.EgresoForm
+@(egresoForm: Form[EgresoForm], tipos: List[String])
 
 <!DOCTYPE html>
 <html lang="en">
